Bug 677345 - when Thunderbird is unfocused, the menubar is hard to read; r=bwinton ui-r=andreasn

--- a/mail/themes/qute/mail/addrbook/addressbook-aero.css
+++ b/mail/themes/qute/mail/addrbook/addressbook-aero.css
@@ -248,9 +248,13 @@ toolbox[labelalign="end"] > toolbar[mode="full"] deck .toolbarbutton-text {
     text-shadow: 0 0 .7em white, 0 0 .7em white, 0 1px 0 rgba(255, 255, 255, .4);
   }
 
-  #menubar-items:not(:-moz-lwtheme):not(:-moz-window-inactive) {
+  #menubar-items:not(:-moz-lwtheme) {
     background-color: rgba(255, 255, 255, .5);
     border-radius: 4px;
+  }
+
+  menubar > menu:-moz-window-inactive {
+    color: MenuText;
   }
 
   /* lesser transparency on Glass background */
